Update Byte.java